; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_sipr16k.c_lsf_decode_fp_16k.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_sipr16k.c_lsf_decode_fp_16k.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LP_FILTER_ORDER_16k = common dso_local global i32 0, align 4
@lsf_codebooks_16k = common dso_local global i32 0, align 4
@qu = common dso_local global i32* null, align 8
@mean_lsf_16k = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (float*, float*, i32*, i32)* @lsf_decode_fp_16k to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lsf_decode_fp_16k(float* %0, float* %1, i32* %2, i32 %3) #0 {
  %5 = alloca float*, align 8
  %6 = alloca float*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  store float* %0, float** %5, align 8
  store float* %1, float** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %12 = load i32, i32* @LP_FILTER_ORDER_16k, align 4
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %10, align 8
  %15 = alloca float, i64 %13, align 16
  store i64 %13, i64* %11, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = load i32, i32* @lsf_codebooks_16k, align 4
  %18 = call i32 @dequant(float* %15, i32* %16, i32 %17)
  store i32 0, i32* %9, align 4
  br label %19

19:                                               ; preds = %60, %4
  %20 = load i32, i32* %9, align 4
  %21 = load i32, i32* @LP_FILTER_ORDER_16k, align 4
  %22 = icmp slt i32 %20, %21
  br i1 %22, label %23, label %63

23:                                               ; preds = %19
  %24 = load i32*, i32** @qu, align 8
  %25 = load i32, i32* %8, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = sub nsw i32 1, %28
  %30 = sitofp i32 %29 to float
  %31 = load i32, i32* %9, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds float, float* %15, i64 %32
  %34 = load float, float* %33, align 4
  %35 = fmul float %30, %34
  %36 = load i32*, i32** @qu, align 8
  %37 = load i32, i32* %8, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i32, i32* %36, i64 %38
  %40 = load i32, i32* %39, align 4
  %41 = sitofp i32 %40 to float
  %42 = load float*, float** %5, align 8
  %43 = load i32, i32* %9, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds float, float* %42, i64 %44
  %46 = load float, float* %45, align 4
  %47 = fmul float %41, %46
  %48 = fadd float %35, %47
  %49 = load i32*, i32** @mean_lsf_16k, align 8
  %50 = load i32, i32* %9, align 4
  %51 = sext i32 %50 to i64
  %52 = getelementptr inbounds i32, i32* %49, i64 %51
  %53 = load i32, i32* %52, align 4
  %54 = sitofp i32 %53 to float
  %55 = fadd float %48, %54
  %56 = load float*, float** %6, align 8
  %57 = load i32, i32* %9, align 4
  %58 = sext i32 %57 to i64
  %59 = getelementptr inbounds float, float* %56, i64 %58
  store float %55, float* %59, align 4
  br label %60

60:                                               ; preds = %23
  %61 = load i32, i32* %9, align 4
  %62 = add nsw i32 %61, 1
  store i32 %62, i32* %9, align 4
  br label %19

63:                                               ; preds = %19
  %64 = load float*, float** %5, align 8
  %65 = load i32, i32* @LP_FILTER_ORDER_16k, align 4
  %66 = sext i32 %65 to i64
  %67 = mul i64 %66, 4
  %68 = trunc i64 %67 to i32
  %69 = call i32 @memcpy(float* %64, float* %15, i32 %68)
  %70 = load i8*, i8** %10, align 8
  call void @llvm.stackrestore(i8* %70)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @dequant(float*, i32*, i32) #2

declare dso_local i32 @memcpy(float*, float*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
